--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         <h3>Successfully Regsitered!</h3>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primaryv" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
@@ -574,7 +574,7 @@
             <div class="modal-body">
                 <div class="container">
                     <div class="text-center" id="error-msg">
-
+                    		
                     </div>
                 </div>
                 <!--container-->
